<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iit.zakhar.minsknb.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/login"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="80dp"
        android:hint="@string/emailHint"
        android:textColorHint="#000000"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@id/login"
        android:layout_alignStart = "@id/login"
        android:layout_alignEnd = "@id/login"
        android:layout_alignLeft="@id/login"
        android:layout_alignRight= "@id/login"
        android:layout_marginBottom="10dp"
        android:textColorHint="#000000"
        android:hint="@string/passHint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:id="@+id/tvBored"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login"
        android:text="@string/MinskNearby"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:textStyle="bold"
        android:id="@+id/btnLogin"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/status"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:textStyle="bold"
        android:id="@+id/btnRegister"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/btnLogin"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignStart="@id/btnLogin"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_alignEnd="@id/btnLogin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Status"
        android:id="@+id/status"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Details"
        android:id="@+id/detail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"/>

</RelativeLayout>
